<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.GameActivity"
    android:background="@drawable/icon_configue">

    <LinearLayout
        android:id="@+id/ll_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/plane_blue_b"
            android:layout_marginRight="5dp"/>
        <TextView
            android:id="@+id/tv_human_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/human"
            android:textColor="#fff"
            android:gravity="center"
            android:background="@drawable/btn_list_left_selector"/>
        <TextView
            android:id="@+id/tv_computer_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/computer"
            android:textColor="#fff"
            android:gravity="center"
            android:background="@drawable/btn_list_center_selector"/>
        <TextView
            android:id="@+id/tv_none_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/none"
            android:gravity="center"
            android:textColor="#fff"
            android:background="@drawable/btn_list_right_selector"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_1"
        android:orientation="horizontal"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/plane_yellow_b"
            android:layout_marginRight="5dp"/>
        <TextView
            android:id="@+id/tv_human_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/human"
            android:textColor="#fff"
            android:gravity="center"
            android:background="@drawable/btn_list_left_selector"/>
        <TextView
            android:id="@+id/tv_computer_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/computer"
            android:textColor="#fff"
            android:gravity="center"
            android:background="@drawable/btn_list_center_selector"/>
        <TextView
            android:id="@+id/tv_none_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/none"
            android:gravity="center"
            android:textColor="#fff"
            android:background="@drawable/btn_list_right_selector"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_2"
        android:orientation="horizontal"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/plane_red_b"
            android:layout_marginRight="5dp"/>
        <TextView
            android:id="@+id/tv_human_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/human"
            android:textColor="#fff"
            android:gravity="center"
            android:background="@drawable/btn_list_left_selector"/>
        <TextView
            android:id="@+id/tv_computer_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/computer"
            android:textColor="#fff"
            android:gravity="center"
            android:background="@drawable/btn_list_center_selector"/>
        <TextView
            android:id="@+id/tv_none_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/none"
            android:gravity="center"
            android:textColor="#fff"
            android:background="@drawable/btn_list_right_selector"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_3"
        android:orientation="horizontal"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/plane_green_b"
            android:layout_marginRight="5dp"/>
        <TextView
            android:id="@+id/tv_human_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/human"
            android:textColor="#fff"
            android:gravity="center"
            android:background="@drawable/btn_list_left_selector"/>
        <TextView
            android:id="@+id/tv_computer_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/computer"
            android:textColor="#fff"
            android:gravity="center"
            android:background="@drawable/btn_list_center_selector"/>
        <TextView
            android:id="@+id/tv_none_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/none"
            android:gravity="center"
            android:textColor="#fff"
            android:background="@drawable/btn_list_right_selector"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ll_4"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/start"
        android:textSize="20sp"
        android:textColor="#fff"
        android:background="@drawable/btn_bg"/>

    <Button
        android:id="@+id/btn_restart"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_start"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/restart"
        android:textSize="20sp"
        android:textColor="#fff"
        android:background="@drawable/btn_bg"/>

</RelativeLayout>
